hide overflow on wrapper-main to avoid scrollbars because of overflowing widgets

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -1,5 +1,8 @@
-body, body .wrapper-main{
+body {
     overflow-x: hidden;
+}
+.wrapper-main {
+    overflow: hidden;
 }
 
 .sb-no-animation.collapsing {
